# apollo-mcp-server

./: .gitignore  CHANGELOG.md  CHANGELOG_SECTION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  apollo.config.json  clippy.toml  codecov.yml  flake.nix  random_file.txt  rust-toolchain.toml  start_mcp.sh  temp.txt
.changesets/: README.md  breaking_jeffrey_change_default_arg_behaviour.md  breaking_nc_config_file.md  config_fix_disable_stateful_sessions.md  config_telemetry_config.md  feat_allow_attribute_configuration_alocay.md  feat_alocay_add_basic_e2e_test.md  feat_armando_use_schema_descriptions_for_variables.md  feat_armando_variable_comment_description_overrides.md  feat_auth_token_passthrough_disable.md  feat_dale_health_check.md  feat_dale_include_operation_name.md  feat_dale_invalid_operation_types.md  feat_imporove_tool_descriptions.md  feat_jeffrey_add_default_collection_support.md  feat_jeffrey_add_version.md  feat_jeffrey_allow_passing_in_url_overrides.md  feat_jeffrey_poll_operation_collections.md  feat_locay_add_mcp_proxy_crate.md  feat_nc_authnz.md  feat_otel_metrics.md  feat_otel_prototype.md  feat_pass_session_id.md  feat_pubmodmatt_client_metadata.md  feat_pubmodmatt_minify.md  feat_pubmodmatt_search.md  feat_retry.md  feat_validate_tool.md  feature_kchu_mit_license.md  fix_apollo_uplink_endpoints_env_var_parsing.md  fix_build-let-expression-fix.md  fix_dale_invalid_operation_not_crash.md  fix_dale_skip_unnamed_operation.md  fix_fix_validate_exec_doc_validation.md  fix_headers_with_colon.md  fix_jeffrey_fix_collection_update_checking.md  fix_locay_properties_empty_map.md  fix_missing_token_propagation.md  fix_oidc_url.md  fix_openai_incompatibility.md  (+16 more)
.github/: CODEOWNERS  renovate.json5
crates/apollo-mcp-proxy/: Cargo.toml
crates/apollo-mcp-proxy/src/: client.rs  lib.rs  main.rs  non_blocking_stdio.rs  server.rs
crates/apollo-mcp-registry/: Cargo.toml
crates/apollo-mcp-registry/src/: files.rs  lib.rs  logging.rs  platform_api.rs  uplink.rs
crates/apollo-mcp-registry/src/platform_api/: operation_collections.rs  platform-api.graphql
crates/apollo-mcp-registry/src/platform_api/operation_collections/: collection_poller.rs  error.rs  event.rs  operation_collections.graphql
crates/apollo-mcp-registry/src/uplink/: event.rs  persisted_queries.rs  schema.rs
crates/apollo-mcp-registry/src/uplink/persisted_queries/: event.rs  manifest.rs  manifest_poller.rs
crates/apollo-mcp-registry/src/uplink/schema/: event.rs  schema_stream.rs
crates/apollo-mcp-registry/src/uplink/snapshots/: apollo_mcp_registry__uplink__schema__tests__schema_by_url@logs.snap  apollo_mcp_registry__uplink__schema__tests__schema_by_url_all_fail@logs.snap  apollo_mcp_registry__uplink__schema__tests__schema_by_url_fallback@logs.snap
crates/apollo-mcp-server/: Cargo.toml  build.rs  telemetry.toml
crates/apollo-mcp-server/src/: .operations.rs.pending-snap  auth.rs  config_schema.rs  connectors.rs  cors.rs  custom_scalar_map.rs  errors.rs  event.rs  explorer.rs  graphql.rs  health.rs  introspection.rs  json_schema.rs  lib.rs  log.rs  logging.rs  main.rs  meter.rs  operations.rs  runtime.rs  schema_tree_shake.rs  server.rs  server_config.rs  server_handler.rs  telemetry.rs  telemetry_attributes.rs  token_counting.rs  trace.rs
crates/apollo-mcp-server/src/auth/: networked_token_validator.rs  protected_resource.rs  valid_token.rs  www_authenticate.rs
crates/apollo-mcp-server/src/introspection/: minify.rs  tools.rs
crates/apollo-mcp-server/src/introspection/tools/: execute.rs  introspect.rs  search.rs  validate.rs
crates/apollo-mcp-server/src/introspection/tools/snapshots/: apollo_mcp_server__introspection__tools__search__tests__search_tool.snap
crates/apollo-mcp-server/src/introspection/tools/testdata/: schema.graphql
crates/apollo-mcp-server/src/log/: logging.rs  schemas.rs
crates/apollo-mcp-server/src/operations/: mutation_mode.rs  operation.rs  operation_source.rs  raw_operation.rs  schema_walker.rs
crates/apollo-mcp-server/src/operations/schema_walker/: name.rs  type.rs
crates/apollo-mcp-server/src/runtime/: config.rs  endpoint.rs  filtering_exporter.rs  graphos.rs  introspection.rs  logging.rs  operation_source.rs  overrides.rs  proxy.rs  schema_source.rs  schemas.rs  serve.rs  telemetry.rs  telemetry_exporter.rs  trace.rs
crates/apollo-mcp-server/src/runtime/logging/: defaults.rs  init.rs  log_rotation_kind.rs  parsers.rs
crates/apollo-mcp-server/src/runtime/telemetry/: attributes.rs
crates/apollo-mcp-server/src/server/: states.rs
crates/apollo-mcp-server/src/server/states/: configuring.rs  operations_configured.rs  running.rs  schema_configured.rs  starting.rs
crates/apollo-schema-index/: Cargo.toml
crates/apollo-schema-index/src/: error.rs  lib.rs  path.rs  traverse.rs
crates/apollo-schema-index/src/snapshots/: apollo_schema_index__tests__search.snap  apollo_schema_index__traverse__tests__schema_traverse.snap
crates/mcp-apollo-registry/: Cargo.toml
crates/mcp-apollo-registry/src/: files.rs  lib.rs  uplink.rs
crates/mcp-apollo-registry/src/testdata/: minimal_supergraph.graphql  supergraph.graphql
crates/mcp-apollo-registry/src/uplink/: persisted_queries.rs  uplink.graphql
crates/mcp-apollo-registry/src/uplink/persisted_queries/: manifest.rs  manifest_poller.rs  persisted_queries_manifest_query.graphql
crates/mcp-apollo-registry/src/uplink/schema/: schema_query.graphql  schema_stream.rs
crates/mcp-apollo-registry/src/uplink/snapshots/: mcp_apollo_registry__uplink__schema__tests__schema_by_url@logs.snap  mcp_apollo_registry__uplink__schema__tests__schema_by_url_all_fail@logs.snap  mcp_apollo_registry__uplink__schema__tests__schema_by_url_fallback@logs.snap
crates/mcp-apollo-server/: Cargo.toml  LICENSE
crates/mcp-apollo-server/src/: custom_scalar_map.rs  errors.rs  explorer.rs  graphql.rs  introspection.rs  json_schema_helpers.rs  lib.rs  main.rs  operation_to_json_schema.rs  operations.rs  sanitize.rs  schema_tree_shake.rs  server.rs  tree_shake.rs
graphql/: operations.json  supergraph.yaml  weather.graphql
(+82 files in other folders)
