[workspace]
resolver = "2"
members = ["crates/apollo-mcp-server", "crates/apollo-mcp-registry"]

[workspace.package]
authors = ["Apollo <opensource@apollographql.com>"]
version = "0.4.2"

[workspace.dependencies]
apollo-compiler = "1.27.0"
apollo-federation = "2.1.3"
futures = { version = "0.3.31", features = ["thread-pool"] }
insta = { version = "1.43.1", features = [
  "json",
  "redactions",
  "yaml",
  "glob",
] }
reqwest = { version = "0.12.15", default-features = false, features = [
  "gzip",
  "json",
  "native-tls-vendored",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = [
  "fs",
  "io-std",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-stream = "0.1"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = "2.4"

[workspace.metadata]
crane.name = "apollo-mcp"

[workspace.lints.clippy]
exit = "deny"
expect_used = "deny"
indexing_slicing = "deny"
unwrap_used = "deny"
panic = "deny"

[patch.crates-io]
# The Rust MCP SDK has not had a release in a long time, so we need to depend on it through GitHub to pick up things
# like Streamable HTTP support. This particular commit is pinned because it is before a change to the way shutdown is
# handled through Axum which broke the ability to shut down the server with Ctrl-C.
rmcp = { git = 'https://github.com/modelcontextprotocol/rust-sdk.git', rev = '915bc3fb37fe259fba1a853a9dd03566593f3310' }
