[package]
name = "apollo-mcp-proxy"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
clap = { version = "4.5.41", features = ["derive"] }
rmcp = { workspace = true, features = ["client", "transport-streamable-http-client", "reqwest"] }
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber.workspace = true
tokio.workspace = true

[lints]
workspace = true