[package]
name = "apollo-mcp-registry"
version = "0.1.0"
edition = "2024"
authors = ["Apollo <opensource@apollographql.com>"]
license-file = "../LICENSE"
repository = "https://github.com/apollographql/apollo-mcp-server"
description = "Registry providing schema and operations to the MCP Server"

[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = [
  "from",
  "display",
] }
derivative = "2.2.0"
futures.workspace = true
graphql_client = "0.14.0"
insta.workspace = true
notify = "8.0.0"
reqwest.workspace = true
secrecy = "0.10.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower = "0.5.2"
tracing.workspace = true
url.workspace = true
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tracing-core.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
test-log = { version = "0.2.16", default-features = false, features = [
  "trace",
] }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
wiremock = "0.6.3"

[lints]
workspace = true
