[package]
name = "apollo-mcp-server"
version.workspace = true
authors.workspace = true
edition = "2024"
license-file = "../LICENSE"

[dependencies]
anyhow = "1.0.98"
apollo-compiler.workspace = true
apollo-federation.workspace = true
apollo-mcp-registry = { path = "../apollo-mcp-registry" }
apollo-mcp-proxy = { path = "../apollo-mcp-proxy" }
axum.workspace = true
bon = "3.6.3"
clap = { version = "4.5.36", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures.workspace = true
lz-str = "0.2.1"
regex = "1.11.1"
reqwest.workspace = true
rmcp.workspace = true
schemars = { version = "1.0.1", features = ["url2"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender.workspace = true
tokio-util = "0.7.15"
url.workspace = true

[dev-dependencies]
figment = { version = "0.10.19", features = ["test"] }
insta = { workspace = true }
rstest = "0.25.0"
secrecy.workspace = true
tracing-test = "0.2.5"

[lints]
workspace = true
