[package]
name = "apollo-mcp-server"
version.workspace = true
authors.workspace = true
edition = "2024"
license-file = "../LICENSE"
default-run = "apollo-mcp-server"

[dependencies]
anyhow = "1.0.98"
apollo-compiler.workspace = true
apollo-federation.workspace = true
apollo-mcp-registry = { path = "../apollo-mcp-registry" }
apollo-schema-index = { path = "../apollo-schema-index" }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-tracing-opentelemetry = "0.29.0"
bon = "3.6.3"
clap = { version = "4.5.36", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures.workspace = true
headers = "0.4.1"
http = "1.3.1"
humantime-serde = "1.1.1"
jsonwebtoken = "9"
jwks = "0.4.0"
lz-str = "0.2.1"
opentelemetry = "0.30.0"
opentelemetry-appender-log = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-resource-detectors = "0.9.0"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = "0.30.0"
regex = "1.11.1"
reqwest-middleware = "0.4.2"
reqwest-tracing = "0.5.8"
reqwest.workspace = true
rmcp = { version = "0.2", features = [
  "server",
  "transport-io",
  "transport-sse-server",
  "transport-streamable-http-server",
] }
schemars = { version = "1.0.1", features = ["url2"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7.15"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing-appender = "0.2.3"
tracing-core.workspace = true
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
figment = { version = "0.10.19", features = ["test"] }
insta.workspace = true
mockito = "1.7.0"
rstest.workspace = true
tokio.workspace = true
tracing-test = "0.2.5"

[lints]
workspace = true

[[bin]]
name = "apollo-mcp-server"
path = "src/main.rs"

[[bin]]
name = "config-schema"
path = "src/config_schema.rs"
test = false
