[package]
name = "apollo-schema-index"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

description = "GraphQL schema indexing"

[dependencies]
apollo-compiler.workspace = true
enumset = "1.1.6"
itertools = "0.14.0"
tantivy = "0.24.2"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true

[lints]
workspace = true
