[package]
name = "mcp-apollo-server"
version.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0.98"
apollo-compiler = "1.27.0"
buildstructor = "0.6.0"
clap = { version = "4.5.36", features = ["derive"] }
derive-new = "0.7.0"
futures-util = "0.3.31"
reqwest = "0.12.15"
rmcp = { version = "0.1", features = [
  "server",
  "transport-io",
  "transport-sse-server",
] }
serde = "1.0.219"
serde_derive = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
  "fs",
  "io-std",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
insta = "1.42.2"

[lints]
workspace = true
