[package]
name = "mcp-apollo-server"
version.workspace = true
edition = "2024"
license = "Elastic-2.0"

[dependencies]
anyhow = "1.0.98"
apollo-compiler.workspace = true
buildstructor = "0.6.0"
clap = { version = "4.5.36", features = ["derive"] }
derive-new = "0.7.0"
lz-str = "0.2.1"
mcp-apollo-registry = { path = "../mcp-apollo-registry" }
reqwest = "0.12.15"
rmcp = { version = "0.1", features = [
  "server",
  "transport-io",
  "transport-sse-server",
] }
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.44.2", features = [
  "fs",
  "io-std",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "time",
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
webbrowser = "1.0.4"
base64 = "0.22.1"

[dev-dependencies]
insta = "1.42.2"

[lints]
workspace = true
